# docs/swagger/swagger.json
@@ -63,7 +63,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorDetail"
+                            "$ref": "#/definitions/controller.InternalErrorDetail"
                         }
                     }
                 }
@@ -106,7 +106,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorDetail"
+                            "$ref": "#/definitions/controller.InternalErrorDetail"
                         }
                     }
                 }
@@ -124,6 +124,19 @@
                 "message": {
                     "type": "string",
                     "example": "request must contain author_id, title, and body"
+                }
+            }
+        },
+        "controller.InternalErrorDetail": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "internal_error"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "An internal error occurred"
                 }
             }
         },
